@@ -256,127 +256,6 @@
     </profile>
 
     <profile>
-      <id>wildfly26</id>
-      <properties>
-        <jboss.runtime>${basedir}/../${wildfly26.runtime.location}</jboss.runtime>
-        <http.port>${jboss.http.port}</http.port>
-      </properties>
-      <dependencies>
-        <dependency>
-          <!-- make sure it comes after assembly in the build -->
-          <groupId>org.cibseven.bpm.qa</groupId>
-          <artifactId>cibseven-qa-wildfly26-runtime</artifactId>
-          <version>${project.version}</version>
-          <type>pom</type>
-        </dependency>
-        <dependency>
-          <groupId>org.cibseven.bpm.webapp</groupId>
-          <artifactId>cibseven-webapp-jboss</artifactId>
-          <version>${project.version}</version>
-          <type>war</type>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.cibseven.bpm</groupId>
-          <artifactId>cibseven-engine-rest</artifactId>
-          <version>${project.version}</version>
-          <classifier>wildfly</classifier>
-          <scope>test</scope>
-          <type>war</type>
-        </dependency>
-        <dependency>
-          <groupId>org.cibseven.bpm</groupId>
-          <artifactId>cibseven-engine</artifactId>
-          <scope>test</scope>
-          <exclusions>
-            <exclusion>
-              <groupId>org.springframework</groupId>
-              <artifactId>spring-beans</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven3-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>start-container</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>start</goal>
-                </goals>
-              </execution>
-              <execution>
-                <id>stop-container</id>
-                <phase>post-integration-test</phase>
-                <goals>
-                  <goal>stop</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <!-- Container configuration -->
-              <container>
-                <type>installed</type>
-                <containerId>${cargo.wildfly26.container.id}</containerId>
-                <append>false</append>
-                <home>${jboss.runtime}</home>
-                <timeout>${cargo.timeout}</timeout>
-              </container>
-              <configuration>
-                <type>standalone</type>
-                <home>${project.build.directory}/config-wildfly</home>
-                <properties>
-                  <cargo.servlet.port>${jboss.http.port}</cargo.servlet.port>
-                  <cargo.jboss.ajp.port>${jboss.ajp.port}</cargo.jboss.ajp.port>
-                  <cargo.jvmargs>-Djava.net.preferIPv4Stack=true</cargo.jvmargs>
-                </properties>
-              </configuration>
-              <deployables>
-                <deployable>
-                  <groupId>org.cibseven.bpm.example</groupId>
-                  <artifactId>cibseven-example-invoice</artifactId>
-                  <type>war</type>
-                  <pingURL>http://localhost:${jboss.http.port}/engine-rest/engine/default/user/demo/profile</pingURL>
-                  <pingTimeout>${cargo.deploy.timeout}</pingTimeout>
-                </deployable>
-                <deployable>
-                  <groupId>org.cibseven.bpm</groupId>
-                  <artifactId>cibseven-engine-rest</artifactId>
-                  <classifier>wildfly</classifier>
-                  <type>war</type>
-                  <pingURL>http://localhost:${jboss.http.port}/engine-rest/engine/default/process-definition</pingURL>
-                  <pingTimeout>${cargo.deploy.timeout}</pingTimeout>
-                </deployable>
-                <deployable>
-                  <groupId>org.cibseven.bpm.webapp</groupId>
-                  <artifactId>cibseven-webapp-jboss</artifactId>
-                  <type>war</type>
-                  <pingURL>http://localhost:${jboss.http.port}/camunda</pingURL>
-                  <pingTimeout>${cargo.deploy.timeout}</pingTimeout>
-                </deployable>
-              </deployables>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <configuration>
-              <excludes>
-                <!-- CAM-14109 -->
-                <exclude>**/SessionCookieSameSiteIT.java</exclude>
-                <exclude>**/LoginIT.java</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
       <id>tomcat9</id>
       <properties>
         <tomcat.runtime>${basedir}/../${tomcat9.runtime.location}</tomcat.runtime>
@@ -712,12 +591,17 @@
 
     <profile>
       <id>embedded-engine-rest</id>
-      <!-- Works only on Wildfly 26 -->
       <dependencies>
         <dependency>
           <groupId>org.wildfly.arquillian</groupId>
           <artifactId>wildfly-arquillian-container-managed</artifactId>
-          <version>1.1.0.Beta1</version>
+          <version>1.1.0.Final</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.arquillian.protocol</groupId>
+          <artifactId>arquillian-protocol-servlet-jakarta</artifactId>
+          <version>1.8.0.Final</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -738,6 +622,9 @@
               <systemPropertyVariables>
                 <projectversion>${project.parent.version}</projectversion>
               </systemPropertyVariables>
+              <argLine>
+                --add-opens java.base/java.io=ALL-UNNAMED
+              </argLine>
             </configuration>
           </plugin>
           <plugin>
